--- a/long_read_qc/10-PB_background.Rmd
+++ b/long_read_qc/10-PB_background.Rmd
@@ -3,7 +3,7 @@
 # PacBio Background {#pb}
 
 ```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
-knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
+knitr::include_graphics(path = "figures/logo_PacBio_web_RGB-1.png", auto_pdf = TRUE)
 ``` 
 
 In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
