--- a/long_read_qc/15-Appendix.Rmd
+++ b/long_read_qc/15-Appendix.Rmd
@@ -1,6 +1,6 @@
 # (APPENDIX) Appendix {-}
 
-# Further resourses
+# Further resources
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/further_resources.png", auto_pdf = TRUE)
 ```
